--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-cors-headers==4.4.0
 filelock==3.15.4
 pillow==10.4.0
 platformdirs==4.2.2
+python-dotenv==1.0.1
 sqlparse==0.5.1
 tzdata==2024.1
 virtualenv==20.26.3
